--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,10 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts",
-    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
     "websocket",
@@ -16,7 +16,7 @@
     "real-time"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -29,5 +29,8 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
