--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm install && npm run build",
     "build:server": "cd server && npm install && npm run build",
-    "start": "cd server && npm start",
+    "start": "node server/dist/index.js",
     "postinstall": "cd server && npm install && cd ../client && npm install"
   },
   "keywords": ["websocket", "multiplayer", "react", "socketio"],
-  "author": "Your Name",
+  "author": "Zayd Hassan",
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
