--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm install && npm run build",
     "build:server": "cd server && npm install && npm run build",
-    "start": "node server/dist/index.js",
+    "start": "cd server && node dist/index.js",
     "postinstall": "cd server && npm install && cd ../client && npm install"
   },
   "keywords": ["websocket", "multiplayer", "react", "socketio"],
